# vbfcp_xmlAnaWSBuilder

./: .gitignore  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  README.md  makefile  rootlogon.C  setup.sh  setup_lxplus.sh
Input/data/run1_ttH/: 7TeV_ttHhad.txt  7TeV_ttHlep.txt  ttHhad.txt  ttHlep.txt
Input/data/ttHyy/: mass_points_data151617_13TeV_TTH_80.0ifb_c27.txt  mass_points_data151617_13TeV_TTH_80.0ifb_c28.txt  mass_points_data151617_13TeV_TTH_80.0ifb_c29.txt  mass_points_data151617_13TeV_TTH_80.0ifb_c30.txt  mass_points_data151617_13TeV_TTH_80.0ifb_c31.txt  mass_points_data151617_13TeV_TTH_80.0ifb_c32.txt  mass_points_data151617_13TeV_TTH_80.0ifb_c33.txt
Input/model/run2_high_mass_diphoton/: bkg_histFitter_ws_13TeV_all_EKHI.root
app/: XMLReader.cpp
config/: dtd
config/bbyy/: resonant_bbyy_run1.xml  side.xml  sr.xml
config/dtd/: AnaWSBuilder.dtd  AnaWSBuilder_v0.dtd  README
config/high_mass_diphoton/: AnaWSBuilder.dtd
config/high_mass_diphoton/graviton/: AnaWSBuilder.dtd  high_mass_diphoton_2015_Graviton_13TeV_histfactory_EKHI_v36.xml  high_mass_diphoton_2016_Graviton_13TeV_histfactory_EKHI_v36.xml  high_mass_diphoton_Graviton_13TeV_histfactory_EKHI_v36.xml
config/ttH/: 7TeV_ttHhad.xml  7TeV_ttHlep.xml  ttH_run1.xml  ttHhad.xml  ttHlep.xml
config/ttH/model/: background_7TeV_ttHhad.xml  background_7TeV_ttHlep.xml  background_ttHhad.xml  background_ttHlep.xml  signal_7TeV_ttHhad.xml  signal_7TeV_ttHlep.xml  signal_ttHhad.xml  signal_ttHlep.xml
config/ttHyy/: ttH_c27.xml  ttH_c28.xml  ttH_c29.xml  ttH_c30.xml  ttH_c31.xml  ttH_c32.xml  ttH_c33.xml  ttHyy.xml
config/ttHyy/model/: background_ttH_c27.xml  background_ttH_c28.xml  (+12 more)
dtd/: AnaWSBuilder.dtd  AnaWSBuilder_v1.dtd
exe/: XMLReader
inc/: CommonHead.h  LinkDef.h  RooEmpXHistShape.h  RooFitHead.h  asimovUtil.hh  auxUtil.hh  fitUtil.hh  xmlAnaWSBuilder.hh
run/: README  ToyLogNLL.sh  cleanFitRsltFiles.sh  copydtd.sh  drawFitRslt.py  genSubSing.sh  genSub_pull.sh  genSubmit.sh  getNLL.cxx  listPull.sh  logNLL.sh  printFitStatus.sh  pullLogNLL.sh  sub_topXml.sh  toyGen.sh
run/Input/: copyAndRename.sh
run/bkgFuncBias/: HistIntvlWidth.cxx  bestfits.sh  confidIntvl.py  getBestFitNom.py  histBias.cxx  truncAtMin_toys.py
run/impactOnDtilde/: PROCEDURE  checkOOVarForRanking.py  createPullInput.cxx  drawNLL_test.py  genFit.sh  genSubmit.sh  genWS.sh  getBestFitNom.py  getConfidIntvl.py  getNLL.cxx  getPostNPErr.py  logNLL.sh  ss_checkOOVarForRanking.py  sysCompare_OOplot.cxx
scripts/: install_roofitext.sh
src/: FlexibleInterpVarMkII.cc  HggMG5aMCNLOLineShapePdf.cc  HggMG5aMCNLOLineShapePdf.cxx  HggTwoSidedCBPdf.cc  RooEmpXHistShape.cxx  RooTwoSidedCBShape.cc  asimovUtil.cc  auxUtil.cc  fitUtil.cc  xmlAnaWSBuilder.cc
(+12 files in other folders)
